# Void-Requiem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  run.sh
cmake/: AddResources.cmake
game/: CMakeLists.txt  TODO.txt
game/src/: app_config.c  definitions.h  draw.c  draw.h  entry.c  game_config.c  headers.h  init.c  init.h  main.c  render.c  splashscreen.c  splashscreen.h  structs.h
game/src/Core/: application.h  entry.h  game_config.h  headers.h  window_data.h  window_manage.c  window_manage.h
game/src/Window/: window_manage.h
